lang/tests/derive/sol/ui/fail/06-invalid-inout-type.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_InOut_Type` is not satisfied
 --> $DIR/06-invalid-inout-type.rs:7:8
  |
7 |     i: f32,
  |        ^^^ the trait `You_Should_Use_An_Valid_InOut_Type` is not implemented for `f32`
